# rpc

./: CMakeLists.txt
example/: user.pb.cc  user.pb.h  user.proto
example/callee/: userservice.cc
example/caller/: calluserservice.cc
src/: CMakeLists.txt  logger.cpp  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cpp  rpcheader.proto  rpcprovider.cc
src/include/: logger.h  messagequeue.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  rpcprovider.h
test/protobuf/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
